@@ -83,6 +83,8 @@
         <DQMconsumerQueueSize xsi:type="xsd:integer">9</DQMconsumerQueueSize>
         <receivedSamples4Stats xsi:type="xsd:unsignedInt">100</receivedSamples4Stats>
         <receivedPeriod4Stats xsi:type="xsd:unsignedInt">5</receivedPeriod4Stats>
+        <receivedDQMSamples4Stats xsi:type="xsd:unsignedInt">10</receivedDQMSamples4Stats>
+        <receivedDQMPeriod4Stats xsi:type="xsd:unsignedInt">60</receivedDQMPeriod4Stats>
         <runNumber          xsi:type="xsd:unsignedInt">1</runNumber>
         <nLogicalDisk       xsi:type="xsd:integer">0</nLogicalDisk> 
         <filePath           xsi:type="xsd:string">/scratch2/cheung</filePath> 
